[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/bitty.tres" type="DynamicFont" id=1]
[ext_resource path="res://objects/interface/Interface.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/key_house.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/key_hall.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/journal.png" type="Texture" id=5]
[ext_resource path="res://classes/OutlinedColorRect.gd" type="Script" id=6]
[ext_resource path="res://assets/textures/broken_vile.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/amulate_ghostspeak.png" type="Texture" id=8]

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Location" type="Label" parent="."]
margin_left = 3.91145
margin_top = 144.823
margin_right = 155.911
margin_bottom = 157.823
custom_fonts/font = ExtResource( 1 )
text = "AUBURN HOLLOWS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interaction" type="RichTextLabel" parent="."]
margin_left = 4.0
margin_top = 136.0
margin_right = 156.0
margin_bottom = 149.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[X] ATTACK [color=red]BAT[/color]"
text = "[X] ATTACK BAT"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HouseKey" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -20.0
margin_right = -4.0
margin_bottom = -4.0
color = Color( 0, 0, 0, 0.8 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
outline_color = Color( 0.996078, 1, 1, 1 )

[node name="Sprite" type="Sprite" parent="HouseKey"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 2, 2 )

[node name="HallKey" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = -4.0
margin_bottom = -24.0
color = Color( 0, 0, 0, 0.8 )
script = ExtResource( 6 )
outline_color = Color( 0.996078, 1, 1, 1 )

[node name="Sprite" type="Sprite" parent="HallKey"]
texture = ExtResource( 4 )
centered = false
offset = Vector2( 2, 2 )

[node name="BrokenVile" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.1651
margin_top = -80.213
margin_right = -4.16513
margin_bottom = -64.213
color = Color( 0, 0, 0, 0.8 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
outline_color = Color( 0.996078, 1, 1, 1 )

[node name="Sprite" type="Sprite" parent="BrokenVile"]
texture = ExtResource( 7 )
centered = false
offset = Vector2( 2, 2 )

[node name="GhostspeakAmulet" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -19.9174
margin_top = -100.113
margin_right = -3.91739
margin_bottom = -84.113
color = Color( 0, 0, 0, 0.8 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
outline_color = Color( 0.996078, 1, 1, 1 )

[node name="Sprite" type="Sprite" parent="GhostspeakAmulet"]
texture = ExtResource( 8 )
centered = false
offset = Vector2( 2, 2 )

[node name="GullivansJournal" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -60.0
margin_right = -4.0
margin_bottom = -44.0
color = Color( 0, 0, 0, 0.8 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
outline_color = Color( 0.996078, 1, 1, 1 )

[node name="Sprite" type="Sprite" parent="GullivansJournal"]
texture = ExtResource( 5 )
centered = false
offset = Vector2( 2, 2 )

[node name="Label" type="Label" parent="GullivansJournal"]
margin_left = -14.0
margin_right = 17.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 1 )
text = "[Z]"
__meta__ = {
"_edit_use_anchors_": false
}
